Mark layout sections

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -255,6 +255,7 @@
     "tag": "footer",
     "class": "footer",
     "templates": [],
+    "layout": true,
     "settings":[
       {
         "type": "header",
