--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -374,6 +374,7 @@
     "tag": "section",
     "class": "header__wrapper",
     "templates": [],
+    "layout": true,
     "settings": [
       {
         "type": "header",
