--- a/sections/top-bar.liquid
+++ b/sections/top-bar.liquid
@@ -100,6 +100,7 @@
     "tag": "section",
     "class": "top-bar",
     "templates": [],
+    "layout": true,
     "settings": [
       {
         "type": "header",
