Added images and default links, removed gradients in sections for Preview app

--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -150,7 +150,7 @@
         "type": "text",
         "id": "title",
         "label": "Title",
-        "default": "FAQ"
+        "default": "Accordion"
       },
       {
         "type": "contentEditor",
