--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -261,7 +261,8 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image"
+        "label": "Image",
+        "default": "booqable://assets/image-placeholder.png"
       },
       {
         "type": "checkbox",
@@ -311,7 +312,7 @@
         "label": "Overlay percentage",
         "min": 0,
         "max": 100,
-        "default": 100
+        "default": 80
       },
       {
         "type": "header",
@@ -345,7 +346,7 @@
         "type": "checkbox",
         "id": "show_transition_top",
         "label": "Show top transition",
-        "default": true
+        "default": false
       },
       {
         "type": "color",
@@ -357,7 +358,7 @@
         "type": "checkbox",
         "id": "show_transition_bottom",
         "label": "Show bottom transition",
-        "default": true
+        "default": false
       },
       {
         "type": "color",
