--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -323,7 +323,8 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image"
+        "label": "Image",
+        "default": "booqable://assets/image-placeholder.png"
       },
       {
         "type": "image_picker",
