--- a/sections/logos.liquid
+++ b/sections/logos.liquid
@@ -95,13 +95,13 @@
         "type": "text",
         "id": "title",
         "label": "Title",
-        "default": "Used by the world's most average companies"
+        "default": "Rent products from the following brands"
       },
       {
         "type": "color_scheme",
         "id": "color_scheme",
         "label": "Color scheme",
-        "default": "set-3"
+        "default": "set-1"
       },
       {
         "type": "header",
