--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -360,7 +360,8 @@
       {
         "type": "url",
         "id": "button_outline_url",
-        "label": "Button link"
+        "label": "Button link",
+        "default": "boqable://products"
       },
       {
         "type": "header",
