--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -155,7 +155,7 @@
         "type": "text",
         "id": "tag",
         "label": "Tagline",
-        "default": "This week"
+        "default": "Tagline"
       },
       {
         "type": "text",
@@ -182,7 +182,8 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image"
+        "label": "Image",
+        "default": "booqable://assets/image-placeholder.png"
       },
       {
         "type": "select",
@@ -246,7 +247,7 @@
         "type": "checkbox",
         "id": "show_transition_top",
         "label": "Show top transition",
-        "default": true
+        "default": false
       },
       {
         "type": "color",
@@ -258,7 +259,7 @@
         "type": "checkbox",
         "id": "show_transition_bottom",
         "label": "Show bottom transition",
-        "default": true
+        "default": false
       },
       {
         "type": "color",
