--- a/sections/articles.liquid
+++ b/sections/articles.liquid
@@ -286,7 +286,7 @@
         "type": "checkbox",
         "id": "show_transition_top",
         "label": "Show top transition",
-        "default": true
+        "default": false
       },
       {
         "type": "color",
@@ -298,7 +298,7 @@
         "type": "checkbox",
         "id": "show_transition_bottom",
         "label": "Show bottom transition",
-        "default": true
+        "default": false
       },
       {
         "type": "color",
@@ -320,7 +320,8 @@
       {
         "type": "url",
         "id": "button_outline_url",
-        "label": "Button link"
+        "label": "Button link",
+        "default": "booqable://root"
       },
       {
         "type": "header",
