--- a/sections/cookie-notice-preferences.liquid
+++ b/sections/cookie-notice-preferences.liquid
@@ -58,7 +58,7 @@
       "type": "color",
       "id": "background_color",
       "label": "Background color",
-      "default": "#EFF1F3"
+      "default": "#CECECE"
     },
     {
       "type": "contentEditor",
