--- a/sections/image-gallery.liquid
+++ b/sections/image-gallery.liquid
@@ -274,7 +274,8 @@
           {
             "type": "image_picker",
             "id": "image",
-            "label": "Image"
+            "label": "Image",
+            "default": "booqable://assets/image-placeholder.png"
           },
           {
             "type": "url",
