--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -386,7 +386,8 @@
           {
             "type": "url",
             "id": "button_outline_url",
-            "label": "Button link"
+            "label": "Button link",
+            "default": "booqable://root"
           }
         ]
       }
