Added image placeholders and update image handling in sections; Fixed stretch sections in preview app

--- a/assets/base.css
+++ b/assets/base.css
@@ -146,6 +146,10 @@ body > * {
   flex-grow: 1;
 }
 
+.preview-app #main:has(section:only-child) {
+  display: block;
+}
+
 .header-sticky:not(.header-transparent) ~ #main,
 .preview-bar__container ~ .header-sticky:not(.header-transparent) ~ #main {
   padding-top: var(--header-height, 114px);
