--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -261,7 +261,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image",
+        "label": "Image (optional)",
         "default": "booqable://assets/image-placeholder.png"
       },
       {
