--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -182,7 +182,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image",
+        "label": "Image (optional)",
         "default": "booqable://assets/image-placeholder.png"
       },
       {
