--- a/layout/minimal.liquid
+++ b/layout/minimal.liquid
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="{%- if settings.color_schemes.first.settings.background_accent != blank -%}{{- settings.color_schemes.first.settings.background_accent -}}{%- else -%}{{- branding_color -}}{%- endif -%}">
     {% comment %} Base stylesheets {% endcomment %}
     {{ "base.css" | asset_url | stylesheet_tag }}
-    
+
     {% unless section_preview %}
       {{ "header.css" | asset_url | stylesheet_tag }}
     {% endunless %}
     {% comment %} Fonts {% endcomment %}
     <script src="https://kit.fontawesome.com/ff3b3de2b5.js" crossorigin="anonymous"></script>
-    
+
     {% if section_preview %}
       {{ options_and_scripts }}
       {{ content_for_styles }}
@@ -31,7 +31,7 @@
       shop: shop
     %}
   </head>
-  <body>
+  <body {% if section_preview %} class="preview-app"{%- endif -%}>
     {% unless section_preview %}
       <header class="header" id="header">
         <div style="padding: 16px 0">
