--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -10,6 +10,7 @@
 {%- assign height                  = section.settings.height -%}
 {%- assign image                   = section.settings.image -%}
 {%- assign image_mobile            = section.settings.image_mobile -%}
+{%- assign image_placeholder       = settings.image_placeholder -%}
 {%- assign overlay_background      = section.settings.overlay_background -%}
 {%- assign overlay_color           = section.settings.overlay_color -%}
 {%- assign overlay_opacity         = section.settings.overlay_opacity -%}
@@ -28,6 +29,14 @@
 {%- assign transition_color_top    = section.settings.transition_color_top -%}
 {%- assign transition_style        = section.settings.transition_style -%}
 {%- assign video_url               = section.settings.video_url | strip -%}
+
+{%- if image != blank -%}
+  {%- assign image = image -%}
+{%- elsif image_placeholder != blank -%}
+  {%- assign image = image_placeholder -%}
+{%- else -%}
+  {%- assign image = blank -%}
+{%- endif -%}
 
 {%- case transition_style -%}
   {%- when "sketch" -%}
@@ -323,8 +332,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image",
-        "default": "booqable://assets/image-placeholder.png"
+        "label": "Image"
       },
       {
         "type": "image_picker",
