Updated image labels, reduced overlay percentage by default

--- a/sections/spacer.liquid
+++ b/sections/spacer.liquid
@@ -63,7 +63,7 @@
       {
         "type": "image_picker",
         "id": "image",
-        "label": "Image"
+        "label": "Image (optional)"
       },
       {
         "type": "header",
