--- a/sections/columns.liquid
+++ b/sections/columns.liquid
@@ -197,7 +197,7 @@
           {
             "type": "image_picker",
             "id": "image",
-            "label": "Image"
+            "label": "Image (optional)"
           },
           {
             "type": "header",
