Fix type of color_scheme input in spacer section

--- a/sections/spacer.liquid
+++ b/sections/spacer.liquid
@@ -52,7 +52,7 @@
         "content": "General settings"
       },
       {
-        "type": "select",
+        "type": "color_scheme",
         "id": "color_scheme",
         "label": "Color scheme",
         "default": "set-1"
