Update login form translations

--- a/sections/login-form.liquid
+++ b/sections/login-form.liquid
@@ -1,21 +1,21 @@
 {{ "account.css" | asset_url | stylesheet_tag }}
 
-{%- assign button_login_label    = section.settings.button_login_label -%}
-{%- assign button_minimal_label  = section.settings.button_minimal_label -%}
-{%- assign button_signup_label   = section.settings.button_signup_label -%}
-{%- assign color_scheme          = section.settings.color_scheme -%}
-{%- assign description           = section.settings.description -%}
-{%- assign email_label           = section.settings.email_label -%}
-{%- assign image                 = section.settings.image -%}
-{%- assign password_label        = section.settings.password_label -%}
-{%- assign padding_top           = section.settings.padding_top -%}
-{%- assign padding_bottom        = section.settings.padding_bottom -%}
-{%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
-{%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-{%- assign reset_password_label  = section.settings.reset_password_label -%}
-{%- assign rounded_corners       = section.settings.rounded_corners -%}
-{%- assign show_border           = section.settings.show_border -%}
-{%- assign title                 = section.settings.title -%}
+{%- assign button_login_label      = section.settings.button_login_label -%}
+{%- assign continue_as_guest_label = section.settings.continue_as_guest_label-%}
+{%- assign create_account_label    = section.settings.create_account_label -%}
+{%- assign color_scheme            = section.settings.color_scheme -%}
+{%- assign description             = section.settings.description -%}
+{%- assign email_label             = section.settings.email_label -%}
+{%- assign image                   = section.settings.image -%}
+{%- assign password_label          = section.settings.password_label -%}
+{%- assign padding_top             = section.settings.padding_top -%}
+{%- assign padding_bottom          = section.settings.padding_bottom -%}
+{%- assign padding_top_mobile      = section.settings.padding_top_mobile -%}
+{%- assign padding_bottom_mobile   = section.settings.padding_bottom_mobile -%}
+{%- assign reset_password_label    = section.settings.reset_password_label -%}
+{%- assign rounded_corners         = section.settings.rounded_corners -%}
+{%- assign show_border             = section.settings.show_border -%}
+{%- assign title                   = section.settings.title -%}
 
 {% comment %} CSS variables start {% endcomment %}
 {%- capture variables -%}
@@ -77,7 +77,7 @@
       {%- if shop.allow_signup -%}
         <div class="account__top">
           <a href="{{ routes.register_url }}" class="account__button button button--primary button--large">
-            {{- button_signup_label | default: "Sign up" -}}
+            {{- create_account_label | default: "Sign up" -}}
           </a>
 
           <span class="account__button button button--outlined button--large" style="pointer-events: none;">
@@ -160,7 +160,7 @@
         {%- if shop.allow_guest_checkout and guest_checkout_url -%}
           <div class="account__divider text-center">
             <a href="{{ guest_checkout_url }}" class="account__button account__button--minimal">
-              {{- button_minimal_label | default: "Continue as guest" -}}
+              {{- continue_as_guest_label | default: "Continue as guest" -}}
             </a>
           </div>
         {%- endif -%}
@@ -263,7 +263,7 @@
       },
       {
         "type": "text",
-        "id": "button_signup_label",
+        "id": "create_account_label",
         "label": "Sign up button label"
       },
       {
@@ -273,7 +273,7 @@
       },
       {
         "type": "text",
-        "id": "button_minimal_label",
+        "id": "continue_as_guest_label",
         "label": "Continue as guest button label"
       },
       {
