--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -53,6 +53,7 @@
 
 .product-card__meta {
   padding: 15px 0;
+  font-size: calc(var(--font-size-regular) - 2px);
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -71,9 +72,15 @@
 }
 
 .product-card__description {
-  font-size: calc(var(--font-size-regular) - 2px);
   padding: 4px 0 8px;
   flex-grow: 0;
+}
+
+.product-card__meta .product-card__description dt,
+.product-card__meta .product-card__description dd,
+.product-card__meta .product-card__description li,
+.product-card__meta .product-card__description li li {
+  font-size: inherit;
 }
 
 .product-card__description:last-child {
