--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -51,7 +51,7 @@
   {%- assign id      = product.id -%}
   {%- assign url     = product.url -%}
   {%- assign name    = product.name -%}
-  {%- assign excerpt = product.description | strip_html | truncatewords: 20, " ..."  -%}
+  {%- assign excerpt = product.description -%}
   {%- assign price   = product | product_price -%}
   {%- assign period  = product | product_price_label -%}
 
@@ -103,7 +103,7 @@
     </h3>
 
     {%- if excerpt != blank and show_excerpt -%}
-      <div class="product-card__description">{{- excerpt -}}</div>
+      <div class="product-card__description bq-content rx-content">{{- excerpt -}}</div>
     {%- endif -%}
 
     {%- if price != blank and period != blank -%}
