--- a/sections/articles.liquid
+++ b/sections/articles.liquid
@@ -159,7 +159,7 @@
                     {%- endif -%}
 
                     {%- if text != blank -%}
-                      <div class="articles__text bq-content rx-content">{{- text | truncatewords: 35, " ..."  -}}</div>
+                      <div class="articles__text bq-content rx-content">{{- text -}}</div>
                     {%- endif -%}
 
                     {%- if article_btn != blank and article_btn_url != blank -%}
