--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -78,6 +78,8 @@
   #cc-main {
     --cc-bg: var(--background-primary);
     --cc-font-family: var(--font-body);
+    --cc-btn-border-radius: var(--border-radius);
+    --cc-modal-border-radius: var(--border-radius-rounded);
 
     --cc-primary-color: var(--color-primary);
     --cc-secondary-color: var(--color-primary);
@@ -88,13 +90,14 @@
 
     --cc-btn-primary-hover-bg: var(--background-accent-hover);
     --cc-btn-primary-hover-border-color: var(--background-accent-hover);
+    --cc-btn-primary-hover-color: var(--color-accent);
 
     --cc-btn-secondary-bg: transparent;
     --cc-btn-secondary-color: var(--color-primary);
     --cc-btn-secondary-border-color: var(--background-accent);
 
-    --cc-btn-secondary-hover-bg: var(--background-accent-secondary-hover);
-    --cc-btn-secondary-hover-border-color: var(--background-accent-secondary-hover);
+    --cc-btn-secondary-hover-bg: var(--background-accent-hover-2);
+    --cc-btn-secondary-hover-border-color: var(--background-accent-hover-2);
     --cc-btn-secondary-hover-color: var(--color-primary);
 
     --cc-cookie-category-block-bg: transparent;
