--- a/assets/base.css
+++ b/assets/base.css
@@ -117,7 +117,7 @@ body {
   min-height: 100%;
   width: 100%;
   overflow-x: clip;
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 
 body > * {
