--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -56,7 +56,6 @@
   font-size: calc(var(--font-size-regular) - 2px);
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
 }
 
 .product-card--full-border .product-card__meta {
@@ -76,13 +75,6 @@
   flex-grow: 0;
 }
 
-.product-card__meta .product-card__description dt,
-.product-card__meta .product-card__description dd,
-.product-card__meta .product-card__description li,
-.product-card__meta .product-card__description li li {
-  font-size: inherit;
-}
-
 .product-card__description:last-child {
   padding-bottom: 0;
 }
@@ -100,6 +92,8 @@
 .product-card__price-wrapper {
   display: flex;
   align-items: flex-end;
+  width: 100%;
+  position: relative;
 }
 
 .product-card__price,
@@ -121,6 +115,17 @@ bq-product-availability {
 bq-product-availability[visible="true"] {
   display: inline-block;
   margin: 9px 0 16px;
+}
+
+.product-card__meta:has(.product-card__description) .product-card__price-wrapper:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 76px;
+  background: linear-gradient(to top, var(--background-primary) 0%, var(--background-primary) 20%, var(--background-primary-00) 100%);
+  position: absolute;
+  bottom: 100%;
+  left: 0;
 }
 
 @media (min-width: 992px) {
