--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -343,7 +343,7 @@
         "type": "text",
         "id": "video_url",
         "label": "Video URL (optional)",
-        "info": "Youtube, Vimeo. If you paste video link here, any images will be ignored"
+        "info": "Youtube, Vimeo. If you paste video link here, any images will be ignored. Preferred format 16:9"
       },
       {
         "type": "checkbox",
