--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -73,10 +73,19 @@
 .product-card__description {
   padding: 4px 0 8px;
   flex-grow: 0;
+  overflow: hidden;
+  max-height: 130px;
 }
 
 .product-card__description:last-child {
   padding-bottom: 0;
+}
+
+.product-card__meta .product-card__description dt,
+.product-card__meta .product-card__description dd,
+.product-card__meta .product-card__description li,
+.product-card__meta .product-card__description li li {
+  font-size: inherit;
 }
 
 .product-card__price-info {
@@ -122,7 +131,7 @@ bq-product-availability[visible="true"] {
   display: block;
   width: 100%;
   height: 76px;
-  background: linear-gradient(to top, var(--background-primary) 0%, var(--background-primary) 20%, var(--background-primary-00) 100%);
+  background: linear-gradient(to top, var(--background-primary) 0%, var(--background-primary) 28%, var(--background-primary-00) 100%);
   position: absolute;
   bottom: 100%;
   left: 0;
