--- a/snippets/icon.liquid
+++ b/snippets/icon.liquid
@@ -18,7 +18,7 @@
 {% unless icon == "empty" %}
   {% style %}
     .fa, .far {
-      color: var(--color-primary);
+      color: currentColor;
     }
   {% endstyle %}
 
