--- a/snippets/variables-product-gallery.liquid
+++ b/snippets/variables-product-gallery.liquid
@@ -11,6 +11,7 @@
     --product-gallery-direction: column;
     --product-gallery-gap: 16px;
     --product-gallery-preview-border: 1px solid var(--color-border);
+    --product-gallery-preview-border-radius: var(--border-radius-rounded-images);
     --product-gallery-preview-gap: 16px;
     --product-gallery-thumbnail-border-radius: var(--border-radius-rounded-images);
     --product-gallery-thumbnail-direction: row;
