--- a/sections/register-form.liquid
+++ b/sections/register-form.liquid
@@ -12,8 +12,8 @@
 {%- assign email_label                              = section.settings.email_label -%}
 {%- assign image                                    = section.settings.image -%}
 {%- assign name_label                               = section.settings.name_label -%}
-{%- assign password_label                           = section.settings.password_label -%}
-{%- assign password_confirmation_label              = section.settings.password_confirmation_label -%}
+{%- assign password_label                           = section.settings.password_label | default: "Password" | append: "*" -%}
+{%- assign password_confirmation_label              = section.settings.password_confirmation_label | default: "Password confirmation" | append: "*" -%}
 {%- assign padding_top                              = section.settings.padding_top -%}
 {%- assign padding_bottom                           = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile                       = section.settings.padding_top_mobile -%}
@@ -143,39 +143,13 @@
           </div>
         </div>
 
-        <div class="account-fieldset__block account__divider--small{% if form.errors.password %} account-fieldset--error{%- endif -%}">
-          <label for="user_password" class="account-fieldset__label">
-            {{- password_label | default: "Password" | append: "*" -}}
-          </label>
-
-          <input
-            class="account-fieldset__input"
-            autocomplete="new-password"
-            type="password"
-            name="user[password]"
-            id="user_password">
-
-          <div class="account__error-message">
-            {{- form.errors.password -}}
-          </div>
-        </div>
-
-        <div class="account-fieldset__block{% if form.errors.password_confirmation %} account-fieldset--error{%- endif -%}">
-          <label for="user_password_confirmation" class="account-fieldset__label">
-            {{- password_confirmation_label | default: "Password confirmation" | append: "*" -}}
-          </label>
-
-          <input
-            class="account-fieldset__input"
-            autocomplete="new-password"
-            type="password"
-            name="user[password_confirmation]"
-            id="user_password_confirmation">
-
-          <div class="account__error-message">
-            {{- form.errors.password_confirmation -}}
-          </div>
-        </div>
+        {%- render 'form-password-session-pages',
+            form: form,
+            form_name: "register",
+            password_label: password_label,
+            password_confirmation_label: password_confirmation_label,
+            button_label: nil
+        -%}
 
         <div class="account__type account__divider{% if form.errors.customer %} account-fieldset--error{%- endif -%}">
           <span class="account-fieldset__static-label">
