--- a/snippets/form-password-session-pages.liquid
+++ b/snippets/form-password-session-pages.liquid
@@ -1,6 +1,6 @@
 {% comment %}
 
-  This snippet is using for rendering the form password inputs on Edit password, Accept invitation and Register pages.
+  This snippet is using for rendering the form input password fields on Edit password, Accept invitation and Register pages.
 
   form_name - "string" optional, the name of the form
   password_label - "string" required, the label of the first field
