Fixed blank space at the end of a page if there is only 1 section on page and when visiting the website using a big screen

--- a/assets/base.css
+++ b/assets/base.css
@@ -151,6 +151,11 @@ body > * {
   flex-grow: 1;
 }
 
+#main > section:only-child > [class*="__wrapper"],
+#main > section:only-child > [class^="__wrapper"] {
+  flex-grow: 1;
+}
+
 .preview-app #main:has(section:only-child) {
   display: block;
 }
