--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -10,7 +10,6 @@
 {%- assign padding_bottom          = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile      = section.settings.padding_top_mobile -%}
 {%- assign padding_bottom_mobile   = section.settings.padding_bottom_mobile -%}
-{%- assign page_title              = page_title | split: " | " | first | remove: ":"-%}
 {%- assign show_transition_bottom  = section.settings.show_transition_bottom -%}
 {%- assign show_transition_top     = section.settings.show_transition_top -%}
 {%- assign tag                     = section.settings.tag -%}
@@ -105,7 +104,7 @@
           {%- endif -%}
 
           <h2 class="title__heading h4">
-            {{- custom_title | default: collection.title | default: page_title -}}
+            {{- custom_title | default: collection.title -}}
           </h2>
 
           <div class="title__description text-medium bq-content rx-content">
