Cookie notice updates

--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -83,6 +83,7 @@
 
     --cc-primary-color: var(--color-primary);
     --cc-secondary-color: var(--color-primary);
+    --cc-overlay-bg: var(--color-primary-67);
 
     --cc-btn-primary-bg: var(--background-accent);
     --cc-btn-primary-color: var(--color-accent);
