Update description in schema

--- a/sections/cookie-notice-preferences.liquid
+++ b/sections/cookie-notice-preferences.liquid
@@ -74,7 +74,7 @@
 {% schema %}
   {
     "name": "Cookie notice preferences",
-    "description": "Display text in various styles.",
+    "description": "Display information about cookies notice",
     "tag": "section",
     "class": "cookie-notice-preferences",
     "settings": [
