Added max-width option for the Hero section content

--- a/assets/hero.css
+++ b/assets/hero.css
@@ -50,6 +50,11 @@
   align-items: center;
   text-align: var(--text-align-mobile);
   margin: 0 var(--margin-right-mobile) 0 var(--margin-left-mobile);
+  max-width: 530px;
+}
+
+.hero__text-area--full-width {
+  max-width: none;
 }
 
 .hero__title {
