Update the default value to true for full-width content in the Hero section

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -334,7 +334,7 @@
         "type": "checkbox",
         "id": "full_width_content",
         "label": "Full-width text content",
-        "default": false
+        "default": true
       },
       {
         "type": "image_picker",
