Fix image URL check in liquid files

--- a/sections/articles.liquid
+++ b/sections/articles.liquid
@@ -128,7 +128,7 @@
               {%- assign article_btn_url = block.settings.article_btn_url -%}
               {%- assign image           = block.settings.image -%}
 
-              {%- if image != blank -%}
+              {%- if image.url != blank -%}
                 {%- assign image = image -%}
               {%- elsif image_placeholder != blank -%}
                 {%- assign image = image_placeholder -%}
