--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -132,11 +132,11 @@
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="products__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} products__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} products__wrapper--padding-bottom{% endif %}{% if image != blank %} products__wrapper--with-background{%- endif -%}"
+    class="products__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} products__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} products__wrapper--padding-bottom{% endif %}{% if image.url != blank %} products__wrapper--with-background{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="products__container container">
-      {%- if title != blank or tag != blank or tag_image != blank -%}
+      {%- if title != blank or tag != blank or tag_image.url != blank -%}
         <div class="products__top">
           {%- if tag_image.url != blank -%}
             <div class="products__tag-image-wrapper">
