--- a/snippets/variables-product-quantity.liquid
+++ b/snippets/variables-product-quantity.liquid
@@ -15,6 +15,6 @@
     --add-button-input-color: var(--color-primary);
     --add-button-input-padding: 8px 12px;
     --add-button-input-width: 110px;
-    --add-button-label-weight: var(--font-weight-bold);
+    --add-button-label-weight: var(--font-weight-extrabold);
   }
 {%- endstyle -%}
