--- a/assets/base.css
+++ b/assets/base.css
@@ -218,7 +218,7 @@ body > * {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: var(--font-heading);
-  font-weight: var(--font-weight-extrabold);
+  font-weight: var(--font-weight-headers);
   margin-bottom: 1.5625rem;
   letter-spacing: -1px;
   line-height: var(--line-height-xs);
@@ -227,16 +227,19 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 h1, .h1 {
   font-size: var(--font-size-h1);
+  font-weight: var(--font-weight-h1);
   line-height: 0.9;
 }
 
 h2, .h2 {
   font-size: var(--font-size-h2);
+  font-weight: var(--font-weight-h2);
   letter-spacing: -0.8px;
 }
 
 h3, .h3 {
   font-size: var(--font-size-h3);
+  font-weight: var(--font-weight-h3);
   line-height: var(--line-height-sm);
   letter-spacing: -0.6px;
 }
@@ -245,21 +248,18 @@ h4, .h4 {
   font-size: 40px;
   line-height: var(--line-height-md);
   letter-spacing: -0.5px;
-  font-weight: var(--font-weight-bold);
 }
 
 h5, .h5 {
   font-size: 24px;
   line-height: 1.4;
   letter-spacing: -0.3px;
-  font-weight: var(--font-weight-bold);
 }
 
 h6, .h6 {
   font-size: 20px;
   line-height: var(--line-height-sm);
   letter-spacing: 2px;
-  font-weight: var(--font-weight-medium);
 }
 
 a {
