--- a/assets/testimonials.css
+++ b/assets/testimonials.css
@@ -64,7 +64,7 @@
   flex-direction: column;
   align-items: flex-start;
   font-size: calc(var(--font-size-regular) + 2px);
-  font-weight: var(--font-weight-extrabold);
+  font-weight: var(--font-weight-headers);
   font-style: normal;
 }
 
