Add limit content by width option in Hero section

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -11,6 +11,7 @@
 {%- assign image                   = section.settings.image -%}
 {%- assign image_mobile            = section.settings.image_mobile -%}
 {%- assign image_placeholder       = settings.image_placeholder -%}
+{%- assign limit_content_width     = section.settings.limit_content_width -%}
 {%- assign overlay_background      = section.settings.overlay_background -%}
 {%- assign overlay_color           = section.settings.overlay_color -%}
 {%- assign overlay_opacity         = section.settings.overlay_opacity -%}
@@ -192,7 +193,7 @@
       {%- if full_width -%}
         <div class="hero__container container">
       {%- endif -%}
-          <div class="hero__text-area{% if show_overlay %} hero__text-area--color{%- endif -%}">
+          <div class="hero__text-area{% if limit_content_width %} hero__text-area--max-width{% endif %}{% if show_overlay %} hero__text-area--color{%- endif -%}">
             <div class="hero__content">
               {%- if title != blank -%}
                 <h1 class="hero__title">{{- title -}}</h1>
@@ -328,6 +329,12 @@
         "id": "description",
         "label": "Description",
         "default": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse <br> varius enim in eros elementum tristique."
+      },
+      {
+        "type": "checkbox",
+        "id": "limit_content_width",
+        "label": "Limit content by width",
+        "default": false
       },
       {
         "type": "image_picker",
