--- a/assets/hero.css
+++ b/assets/hero.css
@@ -52,6 +52,10 @@
   margin: 0 var(--margin-right-mobile) 0 var(--margin-left-mobile);
 }
 
+.hero__text-area--max-width {
+  max-width: 530px;
+}
+
 .hero__title {
   font-size: var(--font-size-h3);
 }
