add automatic `fade out` effect with js for sidebar's dropdown if it's taller than parent element

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -46,6 +46,7 @@
     <script src="{{ "mega-menu.js" | asset_url }}" defer></script>
     <script src="{{ "carousel.js" | asset_url }}" defer></script>
     <script src="{{ "search.js" | asset_url }}" defer></script>
+    <script src="{{ "sidebar.js" | asset_url }}" defer></script>
     <script>
       window.addEventListener('cc:onModalShow', function() {
         document.getElementById('cc-main').classList.add('color-{{ settings.cookie_notice_color_scheme.id }}')
